--- a/config-infra-prod.yml
+++ b/config-infra-prod.yml
@@ -7,9 +7,9 @@ variables:
   # Global
   ap_vm_image: ubuntu-20.04
 
-  namespace: mlopslite #Note: A namespace with many characters will cause storage account creation to fail due to storage account names having a limit of 24 characters.
-  postfix: ao04
-  location: westus
+  namespace: mlopslt33 #Note: A namespace with many characters will cause storage account creation to fail due to storage account names having a limit of 24 characters.
+  postfix: c
+  location: eastus
 
   environment: prod
   enable_aml_computecluster: true
@@ -23,12 +23,12 @@ variables:
   # DO NOT TOUCH
 
   # For pipeline reference
-  resource_group: rg-$(namespace)-$(postfix)$(environment)
-  aml_workspace: mlw-$(namespace)-$(postfix)$(environment)
-  application_insights: mlw-$(namespace)-$(postfix)$(environment)
-  key_vault: kv-$(namespace)-$(postfix)$(environment)
-  container_registry: cr$(namespace)$(postfix)$(environment)
-  storage_account: st$(namespace)$(postfix)$(environment)
+  resource_group: aml120677_RG
+  aml_workspace: Azuremlws33
+  application_insights: azuremlws331095467081
+  key_vault: azuremlws338121585121
+  container_registry: Azuremlcr33
+  storage_account: azuremlws339550594257
 
   # For terraform reference
   terraform_version: 0.14.7
